[tool.poetry]
name = "Ortho4XP"
version = "1.30"
description = "A scenery generator for the X-Plane flight simulator"
authors = ["oscarpilote", "artesim", "girotobial"]
license = "GPL3"
packages = [
    { include = "src"}
]

[tool.poetry.dependencies]
python = "~3.10"
numpy = "1.22.4"
requests = "2.26.0"
Shapely = "1.7.1"
Rtree = "1.0.0"
Pillow = "8.3.2"
pyproj = "3.2.0"


[tool.poetry.dev-dependencies]
pytest-cov = "^3.0.0"
black = "22.3.0"
isort = "5.9.3"
mypy = "0.910"
pytest = "6.2.5"
prospector = {extras = ["with_vulture"], version = "1.5.1"}
types-requests = "2.26.0"
types-Pillow = "8.3.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
minversion="6.0"
addopts = "--cov --cov-branch -ra"

[tool.isort]
profile = "black"
src_paths = ["src", "Ortho4XP.py", "Providers"]
multi_line_output="3"
include_trailing_comma = true
use_parentheses = true
force_grid_wrap = 0
line_length = "79"

[tool.black]
line-length = "79"

[tool.mypy]
files=["src", "Ortho4XP.py", "Providers"]
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
